--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -25,8 +25,8 @@
     padding: 10px 35px;
 }
 .header a:hover {
-    background-color: black;
-    /*color: black;*/
+    /*background-color: #333333;*/
+    color: black;
 }
 .footer{
     text-align: center;
@@ -48,7 +48,6 @@ html{
 body{
     font-family: Helvetica, Arial, sans-serif;
     margin: auto;
-    /*padding: 20%;*/
 }
 .welcome_page {
     padding: 17% 0;
@@ -58,12 +57,21 @@ body{
     text-align: center;
     padding: 5px;
 }
-.city_name {
+.city_name{
     display: flex;
     justify-content: center;
-    font-weight: 300;
-    font-size: 45px;
-    padding-top: 5%;
+    font-weight: 200;
+    font-size: 30px;
+    font-style: italic;
+    color: #dddddd;
+    padding-top: 3%;
+}
+.city_date{
+    margin: 0;
+    text-align: center;
+    font-style: italic;
+    color: #dddddd;
+
 }
 .searchMenu {
     padding: 50px;
@@ -119,7 +127,7 @@ li, p, h5{
 }
 .temp_and_icon{
     float: left;
-    padding-left: 15%;
+    /*padding-left: 15%;*/
     text-align: center;
     image-resolution: normal;
     color: #dddddd;
@@ -132,19 +140,31 @@ li, p, h5{
     font-size: 20px;
 }
 .weather_table{
-    padding-right: 15%;
     float: right;
-    text-align: center;
     color: #dddddd;
     font-style: italic;
+    padding-left: 5%;
 }
-.weather_table_header{
-    font-style: normal;
+p.weather_table_header{
     font-size: 17px;
+    padding: 10px;
+    text-align: left;
+}
+.weather_table_data{
+    padding: 10px;
+    text-align: left;
+    height: 50px;
+    vertical-align: bottom;
+}
+th,td{
+    padding: 15px;
 }
 .container{
+    overflow: auto;
     margin: auto;
-    padding: 2%;
-    text-align: center;
-    width: 50%;
+    width: 43%;
+    background-color: black;
+    opacity: 0.35;
+    border-radius: 10px;
+    /*border: 1px solid seashell;*/
 }
