--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .welcome_page {
-    padding: 17% 0;
+    padding: 15% 0;
     text-align: center;
 }
 
@@ -85,50 +85,6 @@ body {
 
 }
 
-.searchMenu {
-    padding: 50px;
-    font-weight: 400;
-    text-align: center;
-    color: black;
-}
-
-li, p, h5 {
-    display: inline;
-}
-
-.city-list {
-    width: 70%;
-    margin: auto;
-    alignment: center;
-}
-
-.city-list-dayOfWeek {
-    color: black;
-    font-weight: 400;
-    font-size: 35px;
-    font-family: sans-serif;
-}
-
-.city-list-date {
-    font-family: sans-serif;
-    font-weight: 500;
-}
-
-.description {
-    color: black;
-}
-
-.city-list-hour {
-    color: black;
-    font-weight: 500;
-    font-family: sans-serif;
-}
-
-.inner-list {
-    display: inline;
-    position: relative;
-}
-
 .error_message {
     padding-top: 20%;
     margin: auto;
@@ -147,7 +103,7 @@ li, p, h5 {
 .temp_and_icon {
     float: left;
     text-align: center;
-    padding-left: 5%;
+    padding: 10px 0 10px 5%;
     image-resolution: normal;
     color: #dddddd;
 }
@@ -175,14 +131,16 @@ li, p, h5 {
     vertical-align: bottom;
 }
 
-.weather_table td{
+.weather_table td {
     padding: 10px;
 }
 
 .weather_table tr:nth-child(odd) {
     font-size: 20px;
     font-weight: bold;
+    color: #4caf50;
 }
+
 /***********************************/
 .container {
     overflow: auto;
@@ -192,6 +150,8 @@ li, p, h5 {
     opacity: 0.35;
     border-radius: 5px;
 }
+/**********************************/
+            /*longTerm*/
 .container_lt {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
@@ -202,33 +162,39 @@ li, p, h5 {
     opacity: 0.35;
     padding-bottom: 2%;
 }
-.first_day_lt_description{
+
+.first_day_lt_description {
     color: dodgerblue;
 }
-.firstDay, .secondDay, .thirdDay, .fourthDay, .fifthDay{
+
+.firstDay, .secondDay, .thirdDay, .fourthDay, .fifthDay {
     border-left: 3px solid #dddddd;
     border-right: 3px solid #dddddd;
-    /*border-radius: 5px;*/
     padding: 10px;
 }
+
 .weather_table_lt {
     color: white;
     border-bottom: 1px solid #dddddd;
 }
-.weather_table_lt td:nth-child(even){
+
+.weather_table_lt td:nth-child(even) {
     padding: 20px;
     text-align: center;
     vertical-align: bottom;
 }
-.weather_table_lt tr:nth-child(odd){
+
+.weather_table_lt tr:nth-child(odd) {
     font-weight: bold;
     color: #4caf50;
 }
+
 .icon_and_description_lt {
     color: white;
     align-items: center;
     font-weight: bold;
 }
+
 .hour {
     color: red;
     font-size: large;
@@ -236,7 +202,8 @@ li, p, h5 {
     font-style: italic;
     font-weight: bold;
 }
-.day_of_week_and_date_lt{
+
+.day_of_week_and_date_lt {
     color: dodgerblue;
     font-weight: bold;
     font-size: large;
