--- a/src/main/resources/templates/LongTermWeather.html
+++ b/src/main/resources/templates/LongTermWeather.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">-->
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/Footer.html}"/>
@@ -16,8 +15,7 @@
 <div class="header" th:insert="Header"></div>
 <div class="city_name">
     <h1>
-        pogoda
-        <th:block th:text="${weather1.getCity().getName()}"></th:block>
+        pogoda <th:block th:text="${weather1.getCity().getName()}"></th:block>
     </h1>
 </div>
 
@@ -26,17 +24,17 @@
     <div class="firstDay">
         <div class="day_of_week_and_date_lt">
             <div class="day_of_week_lt" th:text="${dayOfWeek.get(0)}"></div>
-            <div class="date_lt" th:text="${#temporals.format(#temporals.createNow(),'dd MM yyyy')}"></div>
+            <div class="date_lt" th:text="${#temporals.format(#temporals.createNow(),'dd.MM.yyyy')}"></div>
         </div>
         <div class="first_day_lt" th:each="i , stat : ${firstDay}">
-            <div class="hour"
-                 th:text="${#temporals.format(hours.get(stat.index),'HH:mm')}">
+            <div class="hour">
+                <p>godzina: <th:block th:text="${#temporals.format(hours.get(stat.index),'HH:mm')}"></th:block>
+                </p>
             </div>
             <div th:if="${i}">
                 <div class="icon_and_description_lt" th:each="j : ${i?.getWeather()}">
                     <img th:src="@{'http://openweathermap.org/img/wn/{img}@2x.png'(img=${j.getIcon()})}">
-                    <div class="first_day_lt_description" th:text="${j.getDescription()}">
-                    </div>
+                    <div class="first_day_lt_description" th:text="${j.getDescription()}"></div>
                 </div>
                 <table class="weather_table_lt">
                     <tr>
@@ -95,11 +93,11 @@
     <div class="secondDay">
         <div class="day_of_week_and_date_lt">
             <div class="day_of_week_lt" th:text="${dayOfWeek.get(1)}"></div>
-            <div class="date_lt" th:text="${#temporals.format(day.plusDays(1),'dd MM yyyy')}"></div>
+            <div class="date_lt" th:text="${#temporals.format(day.plusDays(1),'dd.MM.yyyy')}"></div>
         </div>
         <div class="second_day_lt" th:each="i , stat : ${secondDay}">
-            <div class="hour"
-                 th:text="${#temporals.format(h.get(stat.index),'HH:mm')}">
+            <div class="hour">
+                <p>godzina: <th:block th:text="${#temporals.format(h.get(stat.index),'HH:mm')}"></th:block></p>
             </div>
             <div class="display" th:if="${i}">
                 <div class="icon_and_description_lt" th:each="j : ${i?.getWeather()}">
@@ -164,11 +162,11 @@
     <div class="thirdDay">
         <div class="day_of_week_and_date_lt">
             <div class="day_of_week_lt" th:text="${dayOfWeek.get(2)}"></div>
-            <div class="date_lt" th:text="${#temporals.format(day.plusDays(2),'dd MM yyyy')}"></div>
+            <div class="date_lt" th:text="${#temporals.format(day.plusDays(2),'dd.MM.yyyy')}"></div>
         </div>
         <div class="third_day_lt" th:each="i , stat : ${thirdDay}">
-            <div class="hour"
-                 th:text="${#temporals.format(h.get(stat.index),'HH:mm')}">
+            <div class="hour">
+                <p>godzina: <th:block th:text="${#temporals.format(h.get(stat.index),'HH:mm')}"></th:block></p>
             </div>
             <div th:if="${i}">
                 <div class="icon_and_description_lt" th:each="j : ${i?.getWeather()}">
@@ -233,11 +231,11 @@
     <div class="fourthDay">
         <div class="day_of_week_and_date_lt">
             <div class="day_of_week_lt" th:text="${dayOfWeek.get(3)}"></div>
-            <div class="date_lt" th:text="${#temporals.format(day.plusDays(3),'dd MM yyyy')}"></div>
+            <div class="date_lt" th:text="${#temporals.format(day.plusDays(3),'dd.MM.yyyy')}"></div>
         </div>
         <div class="fourth_day_lt" th:each="i , stat : ${fourthDay}">
-            <div class="hour"
-                 th:text="${#temporals.format(h.get(stat.index),'HH:mm')}">
+            <div class="hour">
+                <p>godzina: <th:block th:text="${#temporals.format(h.get(stat.index),'HH:mm')}"></th:block></p>
             </div>
             <div th:if="${i}">
                 <div class="icon_and_description_lt" th:each="j : ${i?.getWeather()}">
@@ -302,11 +300,11 @@
     <div class="fifthDay">
         <div class="day_of_week_and_date_lt">
             <div class="day_of_week_lt" th:text="${dayOfWeek.get(4)}"></div>
-            <div class="date_lt" th:text="${#temporals.format(day.plusDays(4),'dd MM yyyy')}"></div>
+            <div class="date_lt" th:text="${#temporals.format(day.plusDays(4),'dd.MM.yyyy')}"></div>
         </div>
         <div class="fifth_day_lt" th:each="i , stat : ${fifthDay}">
-            <div class="hour"
-                 th:text="${#temporals.format(h.get(stat.index),'HH:mm')}">
+            <div class="hour">
+                <p>godzina: <th:block th:text="${#temporals.format(h.get(stat.index),'HH:mm')}"></th:block></p>
             </div>
             <div th:if="${i}">
                 <div class="icon_and_description_lt" th:each="j : ${i?.getWeather()}">
