--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -3,11 +3,12 @@
 <head>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>header</title>
 </head>
 <body>
 <header class="header" th:fragment="header">
-    <a class="center" href="/">serwis pogodowy</a>
+    <a class="center" href="/">Serwis Pogodowy</a>
     <a class="right" href="/">wyszukaj ponownie &#128269;</a>
 </header>
 </body>
