--- a/src/main/resources/templates/Welcome.html
+++ b/src/main/resources/templates/Welcome.html
@@ -22,7 +22,7 @@
             <br>
             <br>
             <br>
-            <input class="submit" type="submit" value="szukaj">
+            <p class="submit"><input type="submit" value="szukaj"></p>
         </form>
     </div>
     <div class="footer" th:insert="Footer"></div>
