--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,11 +1,4 @@
-@media screen and (max-device-width: 576px) {
-    .section_name{
-        overflow-y: auto;
-    }
-    .section_body{
-        display: grid;
-    }
-}
+
 /********************** Utils **********************/
 ::selection{
     color: white;
@@ -85,7 +78,7 @@ body {
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-rows: 15% 1fr 5%;
+    grid-template-rows: 12% 1fr 5%;
 }
 
 .welcome_page {
@@ -113,40 +106,98 @@ label{
 
 /********************** LongTermWeather.html **********************/
 
-.container_lt {
-    display: grid;
-    justify-content: center;
-    grid-area: main;
-    grid-template-columns: repeat(5, 20%);
-    grid-row-gap: 5px;
-    overflow: auto;
-    margin: auto;
-    padding-bottom: 2%;
-}
 .cont{
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
-.firstDay, .secondDay, .thirdDay, .fourthDay, .fifthDay {
-    padding: 10px;
+.firstDay, .thirdDay, .fifthDay{
+    display: grid;
+    grid-template-columns: 12% repeat(4, auto);
+    grid-template-rows: repeat(2,auto);
+    background: #dddddd;
+}
+
+.secondDay, .fourthDay{
+    display: grid;
+    grid-template-columns: 12% repeat(4, auto);
+    grid-template-rows: repeat(2,auto);
+    background: rgba(21,21,21,0.39);
+}
+
+.fifthDay{
+    padding-bottom: 3%;
+}
+.day_of_week_lt{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row: span 2;
+    justify-self: center;
+    align-self: center;
 }
 
 .lt_container{
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-rows: 15% auto;
+    grid-template-rows: 12% 88%;
 }
 
 .city_name {
     text-align:  center;
     font-weight: 200;
-    font-size: 1.5vw;
+    font-size: 18px;
     font-style: italic;
     color: black;
-    padding-top: 2%;
 }
+.weather_table_lt {
+    color: black;
+    font-size: 1.10vw;
+    text-align: center;
+}
+
+.weather_table_lt td:nth-child(even) {
+    vertical-align: bottom;
+}
+
+.weather_table_lt tr:nth-child(odd) {
+    font-weight: bold;
+    color: white;
+    background: #390c39;
+    text-align: center;
+}
+
+.icon_and_description_lt {
+    text-align: left;
+}
+
+.first_day_lt_description {
+    color: black;
+    font-size: 1.5vw;
+    font-weight: bold;
+}
+
+.hour {
+    color: black;
+    font-size: 1.5vw;
+    text-align: left;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.day_of_week_and_date_lt {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+
+.day_of_week_lt, .date_lt {
+    color: #390c39;
+    font-weight: bold;
+    font-size: 1.8vw;
+}
+
 
 /*.city_date {
     margin: 0;
@@ -179,8 +230,6 @@ label{
     image-resolution: normal;
     color: #dddddd;
 }
-
-
 
 .temp {
     font-size: 55px;
@@ -225,57 +274,27 @@ label{
     border-radius: 5px;
 }
 
-/**********************************/
-/*longTerm*/
+@media only screen and (max-width: 576px) {
 
+    .firstDay, .secondDay, .thirdDay, .fourthDay, .fifthDay{
+        display: grid;
+        grid-template-columns: repeat(3,auto);
+        background: #dddddd;
+        justify-items: center;
+    }
 
-.weather_table_lt {
-    color: #390c39;
-    border-bottom: 1px solid #dddddd;
-    font-size: 1.10vw;
+    .secondDay, .fourthDay{
+        background: rgba(21,21,21,0.39);
+    }
+
+    .day_of_week_lt{
+        grid-column: span 3;
+        /*justify-self: center;
+        align-self: center;*/
+        text-align: center;
+        padding-top: 2%;
+        width: 100%;
+        border-bottom: 1px solid black;
+    }
+
 }
-
-.weather_table_lt td:nth-child(even) {
-    text-align: center;
-    vertical-align: bottom;
-}
-
-.weather_table_lt tr:nth-child(odd) {
-    font-weight: bold;
-    color: white;
-    background: #390c39;
-}
-
-.icon_and_description_lt {
-    text-align: left;
-    background: dimgrey;
-    border-radius: 5%;
-}
-
-.first_day_lt_description {
-    color: white;
-    font-size: 1.35vw;
-    font-weight: bold;
-}
-
-.hour {
-    color: black;
-    font-size: 1.85vw;
-    text-align: left;
-    font-style: italic;
-    font-weight: bold;
-}
-
-.day_of_week_and_date_lt {
-    display: flex;
-    justify-content: space-around;
-    border-bottom: 1px solid #390c39;
-}
-
-.day_of_week_lt, .date_lt {
-    color: #390c39;
-    font-weight: bold;
-    font-size: 2vw;
-}
-
-
